--- a/learnjs1.html
+++ b/learnjs1.html
@@ -26,7 +26,8 @@
  var daee = {};
  var du = [];
  console.log('du', 'aaaa in cjh')
- console.log('du', 'bbbb in du')
+ console.log('du', 'bbbb in du');
+ 111
 </script>
 
 </html>
